--- a/xiaodx.html
+++ b/xiaodx.html
@@ -87,6 +87,8 @@
         .a1 {
           font-size: 20px;
           padding: 30px 0px 0px 0px;
+          margin-left: 8px;
+          margin-right: 8px;
         }
         .a2 {
           padding: 0px 15px;
@@ -144,7 +146,9 @@
       <div class="b1">
         <div class="a1">
           这里是社团招新没事的都来看看吧<br />
-          觉得这个网站还可以的快发给你的好朋友看看吧
+          觉得这个网站还可以的快发给你的好朋友看看吧<br>
+          暂时只有两大部门后续增加，初心是给大家知道学校部门<br>
+          如果效果好的话后面可以加一些社团的介绍讲解，想让我快速更新邮箱催更
         </div>
       </div>
     </div>
